(fix): fix button cannot be seen and sidebar z-index error

--- a/themes/fairygui/source/css/page.styl
+++ b/themes/fairygui/source/css/page.styl
@@ -26,7 +26,6 @@
                 margin 1.2em 0
     a.button
         font-size .9em
-        color #fff
         margin .2em 0
         width 180px
         text-align center
